--- a/D_1.ipynb
+++ b/D_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCKNcl0Nek/ncyT7zP5KFo",
+      "authorship_tag": "ABX9TyOfqCOWnwJtDwHqzricUcOS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,26 +28,28 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "qm--106KQUn3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "Vhpz3tzTQWAM"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
-        "Google Colab: You can connect Google Colab directly to your GitHub repository. This allows you to open notebooks from GitHub, make changes, and save them back to the reposito"
+        "Phonepay Decision scientist INterview questions:\n",
+        "\n",
+        ".There are two tables\n",
+        "1.customers-name,address,age,customer_id\n",
+        "2. transactions-\n",
+        "customer_id,Transaction_id,tranaction_date,amount,bank_name,transaction_mode,\n",
+        " write a query to fetch first transaction of the day for each customer\n",
+        "https://onecompiler.com/mysql/42qvvw8uu"
       ],
       "metadata": {
-        "id": "A_wdf9XgQbZR"
+        "id": "DvQS4eWcZpAS"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JOKzoGrHZ5nB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
